# kaiano-common-utils

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: bump.yml  ci.yml  combined.yml  manual-version-bump.yml  test-and-version.yml  test.yml  version-bump.yml
docs/: API_CLIENT.md
src/kaiano/: helpers.py  json.py  logger.py  mp3_rename.py
src/kaiano/api/: client.py
src/kaiano/google/: _auth.py  _retry.py  drive.py  errors.py  google.py  sheets.py  sheets_formatting.py
src/kaiano/identify_audio/: README.md  __init__.py  audio_identify.py  policies.py  rename.py  retagger_api.py  retagger_music_tag.py
src/kaiano/llm/: anthropic_client.py  factory.py  openai_client.py
src/kaiano/mp3/: __init__.py
src/kaiano/mp3/identify/: identifier.py
src/kaiano/spotify/: spotify.py
src/kaiano_common_utils/: _google_credentials.py  config.py  get_spotify_refresh_token.py  google_drive.py  google_sheets.py  helpers.py  logger.py  m3u_parsing.py  rename.py  retagger_api.py  retagger_music_tag.py  sheets_formatting.py  spotify.py
src/kaiano_common_utils/google/: __init__.py  drive.py  google.py  sheets.py  sheets_formatting.py
src/kaiano_common_utils/identify_audio/: __init__.py
src/kaiano_common_utils/spotify/: __init__py
tests/kaiano/: test_config_and_logger_real.py  test_helpers.py
tests/kaiano/google/: conftest.py  test_drive_facade.py  test_google_api.py  test_more_coverage.py  test_sheets_facade.py  test_sheets_formatting.py  test_sheets_formatting_more.py
tests/kaiano/mp3/: test_rename_facade_and_renamer.py  test_tag_snapshot_and_tagger.py
tests/kaiano/spotify/: test_spotify_facade.py  test_spotify_trim_playlist.py
tests/kaiano_common_utils/: test_get_spotify_refresh_token.py  test_google_credentials.py  test_google_drive.py  test_google_sheets.py  test_helpers.py  test_m3u_parsing.py  test_sheets_formatting.py  test_spotify.py
(+25 files in other folders)
